--- a/Assets/Editor Default Resources/DialogueSystem/DSNodeStyles.uss
+++ b/Assets/Editor Default Resources/DialogueSystem/DSNodeStyles.uss
@@ -1,37 +1,134 @@
-// Containers
+/* CONTAINERS */
 
 .ds-node__extension-container
 {
-	background-color: #1D1D1E;
-	padding: 8px;
+	background-color: var(--ds-colors-window-dark-grey-1);
+	padding: var(--ds-metrics-window-pixels-8);
 }
 
-.ds-node__custom-data-Containers
+.ds-node__main-container
 {
-	background-color: #212325;
-	border-radius: 4px;
-	padding: 8px;
+	background-color: var(--ds-colors-window-dark-grey-1);
 }
 
-// Inputs
-.ds-node__textfield > .unity-text-field__input
+.ds-node__custom-data-container
 {
-	background-color: #1D1D1E;
-	border-color: #27292C;
-	border-radius: 4px;
-	max-width: 240px;
-	min-width: 160px;
-	padding: 8px;
+	background-color: var(--ds-colors-window-dark-grey-3);
+	border-radius: var(--ds-metrics-window-pixels-4);
+	padding: var(--ds-metrics-window-pixels-8);
 }
 
-.ds-nod__textfield__hidden > .unity-text-field__input
+/* INPUTS */
+
+.ds-node__text-field > .unity-text-field__input
+{
+	background-color: var(--ds-colors-window-dark-grey-1);
+	border-color: var(--ds-colors-window-dark-grey-6);
+	border-radius: var(--ds-metrics-window-pixels-4);
+	max-width: var(--ds-metrics-window-pixels-240);
+	min-width: var(--ds-metrics-window-pixels-160);
+	padding: var(--ds-metrics-window-pixels-8);
+	white-space: normal;
+}
+
+.ds-node__text-field__hidden > .unity-text-field__input
 {
 	background-color: transparent;
 	border-color: transparent;
 }
 
-.ds-nod__textfield__hidden > .unity-text-field__input:focus
+.ds-node__text-field__hidden > .unity-text-field__input:focus
 {
-	background-color: transparent;
+	background-color: var(--ds-colors-window-dark-grey-1);
+	border-color: var(--ds-colors-window-dark-grey-6);
+}
+
+.ds-node__filename-text-field > .unity-text-field__input
+{
+	max-width: var(--ds-metrics-window-pixels-1000);
+	margin: var(--ds-metrics-window-pixels-4);
+	padding: var(--ds-metrics-window-pixels-4);
+}
+
+.ds-node__choice-text-field > .unity-text-field__input
+{
+	font-size: var(--ds-metrics-window-pixels-11);
+	height: var(--ds-metrics-window-pixels-35);
+	max-width: var(--ds-metrics-window-pixels-1000);
+	min-width: var(--ds-metrics-window-pixels-0);
+}
+
+.ds-node__choice-text-field > .unity-text-field__input:focus
+{
+	height: var(--ds-metrics-window-pixels-25);
+	margin: var(--ds-metrics-window-pixels-4);
+	padding: var(--ds-metrics-window-pixels-4);
+}
+
+.ds-node__quote-text-field > .unity-text-field__input
+{
+	background-color: var(--ds-colors-window-dark-grey-4);
 	border-color: transparent;
+	border-left-color: var(--ds-colors-window-dark-grey-6);
+	border-left-width: var(--ds-metrics-window-pixels-4);
+	padding: var(--ds-metrics-window-pixels-16);
+	max-width: var(--ds-metrics-window-pixels-600);
+}
+
+.ds-node__quote-text-field > .unity-text-field__input:hover
+{
+	background-color: var(--ds-colors-window-dark-grey-5);
+}
+
+.ds-node__quote-text-field > .unity-text-field__input:focus
+{
+	background-color: var(--ds-colors-window-dark-grey-1);
+	border-color: var(--ds-colors-window-dark-grey-6);
+}
+
+/* BUTTONS */
+
+.ds-node__button
+{
+	background-color: var(--ds-colors-window-dark-grey-5);
+	border-color: var(--ds-colors-window-dark-grey-1);
+	margin: var(--ds-metrics-window-pixels-4);
+	max-height: var(--ds-metrics-window-pixels-25);
+}
+
+.ds-node__button:hover
+{
+	background-color: var(--ds-colors-window-dark-grey-2);
+}
+
+.ds-node__button:active
+{
+	background-color: var(--ds-colors-window-dark-grey-3);
+	color: var(--ds-colors-window-yellow);
+}
+
+/* ELEMENTS */
+
+TextField
+{
+	margin-left: var(--ds-metrics-window-pixels-0);
+}
+
+.ds-node__custom-data-container > Foldout
+{
+	margin-left: var(--ds-metrics-window-pixels-n4);
+	margin-top: var(--ds-metrics-window-pixels-4);
+}
+
+.ds-node__custom-data-container > Foldout > TextField
+{
+	margin-left: var(--ds-metrics-window-pixels-n12);
+	margin-top: var(--ds-metrics-window-pixels-8);
+}
+
+/* BUILT IN */
+
+.unity-toggle__text
+{
+	margin-left: var(--ds-metrics-window-pixels-2);
 }
